# RustYolo

./: .gitattributes  .gitignore  Cargo.toml  HOW-TO.md  README.md  benchmark_yolov8_coreml.py  benchmark_yolov8_cpu.py  benchmark_yolov8_webgpu.py  build.rs  export_onnx_for_rust.py  generate_plots.py  main.py  pyproject.toml  requirements.txt
.cargo/: config.toml
.github/workflows/: codeql.yml
apps/: README.md  __init__.py  camera_app.py  config.py  detector.py  performance_monitor.py  ui_panel.py  videostream.py  worker.py
attendance_system/: README.md  check_in.py  config.py  core.py  demo.py  face_models.py  register_user.py  ui_utils.py  video_utils.py
benchmark/: generate_plots.py  run_benchmark.py  utils.py
how-to/: README.md  advanced-arrow.md  detection.md  face-recognition.md  performance.md
output/: log_coreml.txt  log_cpu.txt  log_webgpu.txt
src/: README.md  ffi.rs  image_proc.rs  lib.rs  monitor.rs  security.rs  v26.rs  v8.rs  yolo.rs
src/face/: align.rs  detector.rs  embedder.rs  error.rs  ffi.rs  mod.rs
src/v26/: base.rs  cls.rs  detector.rs  mod.rs  pose.rs  seg.rs
src/v8/: base.rs  cls.rs  detector.rs  mod.rs  obb.rs  pose.rs  seg.rs
tests/: test_camera.py  test_monitor.py  test_yolo.py
