[package]
name = "rust_yolo"
version = "0.1.1"
edition = "2024"

[dependencies]
# System Monitoring
sysinfo = "0.32"

# Arrow / Zero-Copy
arrow = { version = "58.1.0", features = ["pyarrow", "ffi"] }

# Python Integration (FFI)
pyo3 = { version = "0.28.3", features = ["extension-module"] }
log = "0.4"
pyo3-log = "0.13.3"

# ONNX Runtime
ort = { version = "2.0.0-rc.12", features = ["coreml", "ndarray"] }
ndarray = { version = "0.17", features = ["rayon"] }
rayon = "1.10"
kornia-image = "0.1"
kornia-imgproc = "0.1"

[lib]
name = "rust_yolo"
crate-type = ["cdylib"]

[features]
webgpu = ["ort/webgpu"]
