[build-system]
requires = [
    "setuptools>=82.0.0",
    "wheel>=0.46.3",
]

[project]
name = "rustyolo"
version = "0.1.1"

requires-python = ">=3.12"
dependencies = [
    # RUNTIME DEPENDENCIES
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "pyarrow>=18.0.0",

    # DEVELOPMENT / EXPORT DEPENDENCIES
    "ultralytics>=8.0.0",
    "onnx>=1.21.0",
    "onnxsim>=0.6.0",
    "maturin>=1.11.0",
]
[project.optional-dependencies]
benchmark = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
    "pandas>=3.0.0",
]
