[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rustyolo"
version = "0.1.1"

requires-python = ">=3.12"
dependencies = [
    "opencv-python==4.13.0.92",
    "numpy==2.4.4",
    "pyarrow==23.0.1",
    "ultralytics==8.4.41",
    "onnx==1.21.0",
    "onnxsim==0.6.2",
    "maturin==1.13.1",
    "onnxruntime==1.25.0",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "pandas==3.0.2",
]
